logs/frontend.log
Traceback (most recent call last):
  File "<frozen runpy>", line 189, in _run_module_as_main
  File "<frozen runpy>", line 159, in _get_module_details
  File "<frozen importlib._bootstrap_external>", line 1160, in get_code
  File "<frozen importlib._bootstrap_external>", line 1090, in source_to_code
  File "<frozen importlib._bootstrap>", line 488, in _call_with_frames_removed
  File "c:\Users\zamor\UltiBotInversiones\src\ultibot_ui\main.py", line 703
    Ensures that user configuration is loaded via the API using a non-blocking worker.
    ^^^^^^^
IndentationError: expected an indented block after 'try' statement on line 701
